show ticket ui updated

--- a/src/pages/show-ticket/show-ticket.scss
+++ b/src/pages/show-ticket/show-ticket.scss
@@ -1,3 +1,45 @@
 page-show-ticket {
+    .setCard{
+        box-shadow: 1px 1px 3px gainsboro;
+    /* max-width: 55%; */
+    display: flex;
+    flex-direction: column;
+    width: 80% !important;
+    max-width: 80% !important;
+    margin-right: 3%;
+    margin-bottom: 3%;
+    }
+    .basicPadding{
+        margin-left: 15% !important;
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+    }
 
+    .cardHeading{
+        background-color: #308cee;
+        padding-bottom: 25%;
+        color: white;
+    }
+
+    .setText{
+        position: relative;
+        margin-top: 30% !important;
+    }
+    .cardBody{
+        font-size: 1.2em;
+        padding-left: 4%;
+    }
+
+    .description{
+        font-size:1.3em;
+    }
+
+    .setBtn{
+        //border-radius: 50%;
+        //font-size: em;
+    }
+    .ticketManager{
+        color: #308cee
+    }
 }
